--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -13,8 +13,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="createtest">
+                <span class="oi oi-plus" aria-hidden="true"></span> Create Test
             </NavLink>
         </li>
         <li class="nav-item px-3">
