--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -9,3 +9,6 @@
 @using Microsoft.JSInterop
 @using FinalYearProject.Client
 @using FinalYearProject.Client.Shared
+@using FinalYearProject.Shared
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using Microsoft.AspNetCore.Authorization 
