wip creating exam changes

--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -12,3 +12,4 @@
 @using FinalYearProject.Shared
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using Microsoft.AspNetCore.Authorization 
+@using Newtonsoft.Json
