--- a/Client/Pages/Test/InputQuestion.razor
+++ b/Client/Pages/Test/InputQuestion.razor
@@ -1,48 +1,80 @@
-﻿@page "/inputquestion/{Id:guid}"
+﻿@page "/inputquestion/{formLength:int}"
 @inject HttpClient Http
 @inject NavigationManager Navigation
 @attribute [Authorize]
 
-<h3>Test Exam</h3>
-
-<EditForm Model="Question" OnValidSubmit="HandleValidSubmit">
+<h4>Create a test</h4>
+<br />
+<EditForm Model="Exam" OnValidSubmit="HandleValidSubmit">
     <DataAnnotationsValidator />
 
-    @for (int i = 0; i < Exam.ExamQuestions.Count; i++)
+    <div class="form-check group">
+        <label class="control-label">Exam name</label>
+        <InputText @bind-Value="Exam.ExamName" class="form-control" />
+        <ValidationMessage For="@(() => Exam.ExamName)" />
+    </div>
+    <br />
+    <div class="form-check group">
+        <label class="control-label">Exam creator</label>
+        <select @bind="Exam.TeacherId" class="form-control">
+            <option value=""></option>
+            @foreach (var teach in teachers)
+            {
+                <option value="@teach.TeacherId">@teach.FirstName @teach.LastName</option>
+            }
+        </select>
+        <ValidationMessage For="@(() => Exam.TeacherId)" />
+    </div>
+    <br />
+    <br />
+    @foreach (var quest in questionList)
     {
         <div class="form-check group">
-            <label class="control-label">Question @i</label>
-            <InputText @bind-Value="questionName[i]" class="form-control" />
-
+            <label class="control-label">Question</label>
+            <InputText @bind-Value="quest.Text" class="form-control" />
+            <ValidationMessage For="@(() => quest.Text)" />
+            <br />
             <label class="control-label">Input Type:</label>
-            <select class="control-label" @bind="questionType[i]">
+            <select class="control-label" @bind="quest.Type">
                 <option value="text">Text</option>
                 <option value="image">Image</option>
             </select>
+            <ValidationMessage For="@(() => quest.Type)" />
+            <br />
+            <br />
+            <label class="control-label">Mark</label>
+            <InputNumber @bind-Value="quest.Mark" class="form-control" />
+            <br />
         </div>
-        <p></p>
+        <br />
+        <br />
     }
     <button type="submit" class="btn btn-primary">
         <i class="fas fa-save"></i> Submit
     </button>
+    <br />
 </EditForm>
 
 @code {
-    Question Question = new Question();
-    private Exam Exam = new Exam();
-    private Question[] QuestionArray;
-    private int formLength = 0;
-    private string[] questionName;
-    private string[] questionType;
-    bool IsFormVisible = false;
-    [Parameter] public Guid Id { get; set; }
+    private Exam Exam { get; set; } = new Exam();
+    private List<Question> questionList = new List<Question>();
+    private List<Teacher> teachers = new List<Teacher>();
+    [Parameter] public int formLength { get; set; }
 
-    private async void OnInitializedAsync()
+
+    protected override async Task OnInitializedAsync()
     {
         try
         {
-            //use {id} to assign it correctly
-            Exam = await Http.GetFromJsonAsync<Exam>($"/api/Exams/{Id}");
+            Random code = new Random();
+            Exam.ExamCode = code.Next(1000, 9999);
+            teachers = await Http.GetFromJsonAsync<List<Teacher>>("/api/Teachers");
+            for(int i = 0; i < formLength; i++)
+            {
+                Question Question = new Question();
+                Question.ExamId = Exam.ExamId;
+                questionList.Add(Question);
+            }
         }
         catch (AccessTokenNotAvailableException exception)
         {
@@ -58,8 +90,9 @@
     {
         try
         {
-            //stuff everything into exam and then put it
-            var response = await Http.PutAsJsonAsync($"/api/Exams/{Exam.ExamId}", Exam);
+            //stuff everything into exam and then post it
+            Exam.ExamQuestions = questionList;
+            var response = await Http.PostAsJsonAsync($"/api/Exams", Exam);
             response.EnsureSuccessStatusCode();
         }
         catch (AccessTokenNotAvailableException exception)
@@ -70,6 +103,7 @@
         {
 
         }
+
 
     }
 
