--- a/Client/Pages/Test/CreateTest.razor
+++ b/Client/Pages/Test/CreateTest.razor
@@ -1,4 +1,4 @@
-﻿@page "/createtest"
+﻿@page "/test/createtest"
 @inject HttpClient Http
 @inject NavigationManager Navigation
 @attribute [Authorize]
