--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -18,8 +18,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="createtest">
-                <span class="oi oi-plus" aria-hidden="true"></span> Create Test
+            <NavLink class="nav-link" href="/test/viewtest">
+                <span class="oi oi-plus" aria-hidden="true"></span> View Test
             </NavLink>
         </li>
         <li class="nav-item px-3">
