--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -11,5 +11,8 @@
 @using FinalYearProject.Client.Shared
 @using FinalYearProject.Shared
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
-@using Microsoft.AspNetCore.Authorization 
+@using Microsoft.AspNetCore.Authorization
 @using Newtonsoft.Json
+@using Blazored
+@using Blazored.Modal
+@using Blazored.Modal.Services
