--- a/Client/Pages/Test/DeleteTest.razor
+++ b/Client/Pages/Test/DeleteTest.razor
@@ -1,4 +1,4 @@
-﻿@page "/test/deletetest"
+﻿@page "/test/deletetest/{Id:guid}"
 
 @attribute [Authorize]
 @inject HttpClient Http
@@ -7,7 +7,7 @@
 
 <h1> Please confirm you want to delete the following project?</h1>
 
-<h4>exams Name</h4>
+<h4>Exam Name</h4>
 <p>@Exam.ExamName</p>
 
 <h4>Assigned teacher</h4>
@@ -17,7 +17,6 @@
 
 @code{
     [Parameter] public Guid Id { get; set; }
-    [CascadingParameter] BlazoredModalInstance ModalInstance { get; set; }
     private Exam Exam { get; set; } = new Exam();
     private Teacher Teacher { get; set; } = new Teacher();
 
@@ -44,7 +43,7 @@
         {
             var response = await Http.DeleteAsync($"/api/Exams/{Id}");
             response.EnsureSuccessStatusCode();
-            ModalInstance.Close(ModalResult.Ok("Success"));
+            Navigation.NavigateTo("/test/viewtest");
         }
         catch (AccessTokenNotAvailableException exception)
         {
