--- a/Client/Pages/Test/DeleteTest.razor
+++ b/Client/Pages/Test/DeleteTest.razor
@@ -1,6 +1,5 @@
 ﻿@page "/test/deletetest/{Id:guid}"
-
-@attribute [Authorize]
+@attribute [Authorize(Roles = "Administrators")]
 @inject HttpClient Http
 @inject NavigationManager Navigation
 
@@ -11,21 +10,21 @@
 <p>@Exam.ExamName</p>
 
 <h4>Assigned teacher</h4>
-<p>@Teacher.FirstName @Teacher.LastName </p>
+@*<p>@Teacher.FirstName @Teacher.LastName </p>*@
 
 <button class="btn btn-danger" @onclick="DeleteExam">Delete</button>
 
 @code{
     [Parameter] public Guid Id { get; set; }
     private Exam Exam { get; set; } = new Exam();
-    private Teacher Teacher { get; set; } = new Teacher();
+    @*private Teacher Teacher { get; set; } = new Teacher();*@
 
     protected override async Task OnInitializedAsync()
     {
         try
         {
             Exam = await Http.GetFromJsonAsync<Exam>($"/api/Exams/{Id}");
-            Teacher = await Http.GetFromJsonAsync<Teacher>($"/api/Teachers/{Exam.TeacherId}");
+            @*Teacher = await Http.GetFromJsonAsync<Teacher>($"/api/Teachers/{Exam.TeacherId}");*@
         }
         catch (AccessTokenNotAvailableException exception)
         {
