--- a/Client/Pages/Test/CreateTest.razor
+++ b/Client/Pages/Test/CreateTest.razor
@@ -1,7 +1,7 @@
 ﻿@page "/test/createtest"
 @inject HttpClient Http
 @inject NavigationManager Navigation
-@attribute [Authorize]
+@attribute [Authorize(Roles = "Administrators")]
 
 <h5>Create a test</h5>
 <br />
