--- a/Client/Pages/Test/HomeTest.razor
+++ b/Client/Pages/Test/HomeTest.razor
@@ -1,7 +1,7 @@
 ﻿@page "/test/"
 @inject HttpClient Http
 @inject NavigationManager Navigation
-@attribute [Authorize]
+@attribute [Authorize(Roles = "Administrators")]
 
 <h3>TestHome</h3>
 
