--- a/Client/Pages/Test/InputQuestion.razor
+++ b/Client/Pages/Test/InputQuestion.razor
@@ -1,7 +1,7 @@
 ﻿@page "/test/inputquestion/{formLength:int}"
 @inject HttpClient Http
 @inject NavigationManager Navigation
-@attribute [Authorize]
+@attribute [Authorize(Roles = "Administrators, Teachers")]
 
 <h4>Create a test</h4>
 <br />
